# finetune-monorepo

./: .gitignore  MODULE.bazel  README.md  bazel_requirements_lock.txt  setup.sh
.github/workflows/: ci.yml
src/cache_manager/: BUILD  cache_manager.py  run_cache_manager.sh
src/training/: BUILD  run_training.sh  train_model.py
